2007-09-02  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crashes on pushed ok button on a server properties dialog.

2007-09-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to try RUBYCOCOA_THREAD_HOOK_DISABLE = 1.

2007-08-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to return the same objects in NSOutlineView datasource.

2007-08-29  Satoshi Nakagawa <artension@gmail.com>

	Added confirmation on deleting a server from menu.
	Fixed a bug, application crashes when clicking copy menu item in context menus.

2007-08-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the server item in the tree should be open when created the first child.
	Fixed a bug, log view should scroll to the bottom when it finished loading.

2007-08-26  Satoshi Nakagawa <artension@gmail.com>

	Replaced NSData#bytes.bytestr for NSData#rubyString.

2007-08-24  Satoshi Nakagawa <artension@gmail.com>

	Added menus, mark and clear scrollback.
	Changed max lines of log view to 3000.

2007-08-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crashes when pushed Command + -.

2007-08-18  Satoshi Nakagawa <artension@gmail.com>

	Added application icon.

2007-08-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, channel password should be kept after kicked out for rejoining.

2007-08-15  Satoshi Nakagawa <artension@gmail.com>

	Released 0.9.

2007-08-15  Satoshi Nakagawa <artension@gmail.com>

	Commented needless objc_method and objc_class_method.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Added auto masking for registering auto op.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Changed to delay sending who commands.

2007-08-14  Satoshi Nakagawa <artension@gmail.com>

	Added auto op.

2007-08-12  Satoshi Nakagawa <artension@gmail.com>

	Added support for jobs, travel, mobi, cat, tel, asia gTLDs.
	Changed to support urls missing the first 'h'.

2007-08-09  Satoshi Nakagawa <artension@gmail.com>
