@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{632, 78}, {878, 1086}}</string>
+	<string>{{632, 44}, {878, 984}}</string>
 </dict>
 </plist>
